--- a/entry.html
+++ b/entry.html
@@ -12,6 +12,8 @@
 	<script src="tgc.js"></script>
 <!--	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
 <script>
+// version: 20150228-1
+
 // TODO dialog when submitting system with distances that won't be submitted
 // TODO load systems from system.json as well
 // TODO prepopulate distances for dupe systems
