--- a/entry.html
+++ b/entry.html
@@ -20,7 +20,7 @@
 // TODO optimisation
 // TODO consider not clearing the form if TGC can't trilaterate
 
-var expertMode = false;	// if true then allows submission of any data. use with care. also enables "recently added" list and "add unfinished button"
+var expertMode = true;	// if true then allows submission of any data. use with care. also enables "recently added" list and "add unfinished button"
 
 var systemData = null;	// current system data
 var jsonOutput = "";
@@ -582,7 +582,7 @@ function updateCoords() {
 		var good = [];	// list of the good systems found
 		var debug = 10;
 		$.each(systemsMap, function(key, s) {
-			if (s.x == null) return;	// unlocated systems are of no use
+			if (s.x == null || s.tgcunlocated) return;	// unlocated systems are of no use (currently including systems we have coords for but that TGC doesn't)
 			if (used[vectorToString(s)]) return;	// skip distances already used
 
 			var bestDist = eddist(s, bestCandidate);
@@ -629,7 +629,7 @@ function updateCoords() {
 			var best = [];	// list of the best systems found
 			var bestNum = 0;	// number of candidates differentiated by best systems
 			$.each(systemsMap, function(key, s) {
-				if (s.x == null) return;	// unlocated systems are of no use
+				if (s.x == null || s.tgcunlocated) return;	// unlocated systems are of no use (currently including systems we have coords for but that TGC doesn't)
 				if (used[vectorToString(s)]) return;	// skip distances already used
 				
 				var dists = {};
