Latest corrections for TGC data.

--- a/sysinfo.html
+++ b/sysinfo.html
@@ -385,7 +385,7 @@ function selectSystem() {
 					<th data-sort="string-ins">System</th>
 					<th data-sort="optfloat">Distance</th>
 					<th data-sort="optfloat">Calculated</th>
-					<th data-sort="optfloat" style="width:12em">Status</th>
+					<th data-sort="string-ins" style="width:12em">Status</th>
 					<th data-sort="string-ins">Date</th>
 					<th data-sort="string-ins">Cmdr</th>
 				</tr>
