--- a/systemsvis.html
+++ b/systemsvis.html
@@ -29,7 +29,7 @@ var axes;
 
 var systems = [];
 
-var cmdrColors = ['gray', 'aqua', 'teal', 'red', 'maroon', 'blue', 'navy', 'lime', 'green', 'fuchsia', 'purple', 'orange', 'yellow', 'olive','white'];
+var cmdrColors = ['gray', 'red', 'aqua', 'blue', 'lime', 'fuchsia', 'yellow', 'orange', 'maroon', 'teal', 'navy', 'green', 'purple', 'olive','white'];
 var cmdrColorMap = {};
 
 $(document).ready(function () {
